--- a/trunk/poc2/monografia/abstract.tex
+++ b/trunk/poc2/monografia/abstract.tex
@@ -1,6 +1,6 @@
 \begin{abstract}
 
-With the increasing demand for 3D models in areas such as games, the procedural content generation is becoming increasingly popular, in order to reduce costs and development time. With procedural techniques, it is possible to create a large number of models modifying a few parameters on the algorithms responsable for the generation. However, procedural techniques have a low user interaction, creating generic models that are not always expressive. This work focus is on procedural generation of terrains and it proposes a framework, using the OpenGL API, that increases the user interaction level, in order to create models that better translate his expectations. Well know procedural techniques are explored and mixed with terrain and models inserted by the user.
+With the increasing demand for 3D models in areas such as games, the procedural content generation is becoming increasingly popular, in order to reduce costs and development time. With procedural techniques, it is possible to create a large number of models modifying a few parameters on the algorithms responsable for the generation. This work plans to utilizy the power of the modern video cards (\emph{GPU}) to generate infinit terrains. A comparative between \emph{GPU} generation and \emph{CPU} is made, in order to avaliate the performance of the two different architectures.
 
-    \textbf{Keywords}: Procedural content generation, terrain.
+    \textbf{Keywords}: Procedural content generation, terrain, gpu.
 \end{abstract}
