--- a/trunk/poc2/monografia/capa.tex
+++ b/trunk/poc2/monografia/capa.tex
@@ -10,7 +10,7 @@ Departamento de Ciência da Computação \\
 \vspace{10em}
 {MONOGRAFIA DE PROJETO ORIENTADO EM COMPUTAÇÃO II} \\
 \vspace{1em}
-\textbf{Geração Procedural de Terrenos Pseudo Infinitos na GPU} \\
+\textbf{Geração Procedural e Visualização de Terrenos Infinitos na GPU} \\
 \hspace{.45\textwidth} % posicionando a minipage
 \vfill
 Belo Horizonte -- MG \\
