--- a/trunk/poc2/monografia/epigrafe.tex
+++ b/trunk/poc2/monografia/epigrafe.tex
@@ -5,11 +5,8 @@
 \pretextualchapter{}
 \vspace{8cm}
 \begin{flushright}
-\textnormal{```Fractal geometry will make you see everything differently. \\
-	 You risk the loss of your childhood vision of clouds, forests,\\
-	 flowers, galaxies, leaves, feathers, rocks, mountains,\\
-	 torrents of water, carpets, bricks, and much else besides.\\
-	 Never again will your interpretation of these things be quite the same.'' \\
-	\bfseries Michael F. Barnsley}
+\textnormal{```Natural complexity seems to defeat all human attempts to oversimplify and tame it. \\
+	 And maybe that's a good thing. '' \\
+	\bfseries Ken Perlin}
 \end{flushright}
 
