--- a/trunk/poc2/monografia/folharosto.tex
+++ b/trunk/poc2/monografia/folharosto.tex
@@ -12,7 +12,7 @@ Departamento de Ciência da Computação\\
 \begin{minipage}{.7\textwidth}
 \begin{center}
 \vspace{1cm}
-\textbf{Desenvolvimento de um Arcabouço para a Geração Procedural e Visualização de Terrenos em Tempo-Real} \par
+\textbf{Geração Procedural e Visualização de Terrenos Infinitos na GPU} \par
 \vspace{2em}
 por \par
 \vspace{2em}
@@ -20,7 +20,7 @@ Fábio Markus Nunes Miranda\par
 \vspace{2em}
 Monografia de Projeto Orientado em Computação I \par
 \vspace{1em}
-\footnotesize{Apresentado como requisito da disciplina de Projeto Orientado em Computação I do Curso de Bacharelado em Ciência da Computação da UFMG} \par
+\footnotesize{Apresentado como requisito da disciplina de Projeto Orientado em Computação II do Curso de Bacharelado em Ciência da Computação da UFMG} \par
 \vspace{2em}
 Prof. Dr. Luiz Chaimowicz\par
 Orientador\par
@@ -45,7 +45,7 @@ Assinatura do co-orientador:\par
 
 \vfill
 Belo Horizonte -- MG \\
-2008 / 2º semestre
+2009 / 1º semestre
 \end{center}
 \end{titlepage}
 
