--- a/trunk/poc2/monografia/introducao.tex
+++ b/trunk/poc2/monografia/introducao.tex
@@ -7,7 +7,7 @@ A geração procedural de modelos é uma área da Ciência da Computação que propõe q
 Outro fato também muito relevante atualmente são as (\emph{Graphics Processing Unit} (\sigla{GPU}{Graphics Processing Unit})). Estes microprocessadores, incorporados às placas de vídeo atuais, são especializados em processar gráficos. O avanço da indústria de \emph{games} fez com que as \emph{GPUs} se tornassem cada vez mais rápidas, tornando-as atraente para outras áreas da computação.
 
 \section{Objetivo, justificativa e motivação}
-O objetivo deste trabalho é permitir a criação de terrenos proceduralmente em tempo real, aproveitando o poder de processamento da \emph{GPU}. O trabalho pode ser dividido em duas vertentes: visualização de terrenos e sua geração proceduralmente.
+O objetivo deste trabalho é permitir a criação de terrenos proceduralmente em tempo real, aproveitando o poder de processamento da \emph{GPU}, e comparar as velocidades de geração em relação à \emph{CPU}. O trabalho pode ser dividido em duas vertentes: visualização de terrenos e sua geração proceduralmente.
 
 
 O primeiro aspecto (a visualização) é um problema muito estudado no campo da computação. O modelo de um terreno é algo que pode demandar um número extremamente alto de triângulos. O processo de gerar a imagem a partir desse modelo (ou renderização) em tempo real fica inviabilizado nos computadores atuais. Faz-se então necessária a utilização de técnicas que limitam e minimizam o número de triângulos a serem desenhados na tela. Entra aí o uso de \emph{culling} e níveis de detalhe dos modelos.
