--- a/trunk/poc2/monografia/conclusao.tex
+++ b/trunk/poc2/monografia/conclusao.tex
@@ -7,6 +7,8 @@
 
 %O uso de texturas também será aprofundado, possivelmente com o uso de sombras pré-calculadas \cite{slopelighting}. Outra questão a ser desenvolvida em POC II é uma \emph{interface} gráfica mais atrativa, e uma forma eficiente de se armazenar as informações inseridas pelo usuário, possivelmente em arquivos \emph{Extensible Markup Language} (\sigla{XML}{Extensible Markup Language}).
 
-Os resultados obtidos na geração procedural de terrenos na \emph{GPU} mostram o poder de processamento das placas gráficas, em relação às \emph{CPU}. 
+Os resultados obtidos na geração procedural de terrenos na \emph{GPU} mostram o poder de processamento das placas gráficas, em relação às \emph{CPU}. Este trabalho, porém, não implementou uma alternativa \emph{multi-core} para a geração procedural na \emph{CPU}. Isto certamente diminuiria o tempo gasto na geração. Outro aspecto que pode ser abordado no futuro é o escalonamento entre \emph{GPU} e \emph{CPU}, dependendo do nível de ociosidade de cada processador.
 
+Um ponto a ser melhorado na geração procedural é quanto à heterogeneidade do terreno. Apesar de apresentar um resultado satisfatório para um local limitado, quando se olha o terreno como um todo, percebe-se que há uma semelhança muito grande entre os terrenos, diminuindo assim a ilusão de estar andando em um terreno realmente infinito.
 
+O sistema foi implementado sempre tendo em mente a sua utilização acoplado a outras aplicativos. Dessa forma, adotá-lo em um simulador ou \emph{game} demandaria pouco esforço.
