--- a/trunk/poc2/monografia/resumo.tex
+++ b/trunk/poc2/monografia/resumo.tex
@@ -1,5 +1,5 @@
 \begin{resumo}
-Com o aumento da demanda por modelos 3D em áreas como jogos eletrônicos, a geração procedural se faz cada vez mais necessária, para reduzir custos e tempo de desenvolvimento. Através de técnicas procedurais, é possível criar um grande número de modelos com a variação de alguns poucos parâmetros dos algoritmos responsáveis pela geração. Porém, técnicas procedurais se caracterizam por uma baixa interação do usuário, gerando assim modelos genéricos e pouco expressivos. Este trabalho é focado na geração de terrenos proceduralmente e aqui será proposto um arcabouço, utilizando a API OpenGL, que insira no processo uma maior participação do usuário, com o objetivo de criar modelos que traduzam melhor a sua expectativa. Técnicas procedurais já difundidas são exploradas e mescladas com inserção de terrenos e modelos por parte do usuário.
+Com o aumento da demanda por modelos 3D em áreas como jogos eletrônicos, a geração procedural se faz cada vez mais necessária, para reduzir custos e tempo de desenvolvimento. Através de técnicas procedurais, é possível criar um grande número de modelos com a variação de alguns poucos parâmetros dos algoritmos responsáveis pela geração. Este trabalho tem como objetivo utilizar o poder das placas gráficas atuais (\emph{GPUs}) para a geração de terrenos infinitos. Um comparativo com geração de terrenos na \emph{CPU} também é feito, com o objetivo de avaliar a performance das duas diferentes arquiteturas.
 
-    \textbf{Palavras-chave:} Geração procedural de conteúdo, terreno.
+    \textbf{Palavras-chave:} Geração procedural de conteúdo, terreno, gpu.
 \end{resumo}
