--- a/trunk/poc2/monografia/resultados.tex
+++ b/trunk/poc2/monografia/resultados.tex
@@ -47,18 +47,27 @@ A Figura \ref{fig:arquitetura} apresenta em detalhes os módulos presentes nas ca
 
 \subsection{Geração do Terreno}
 \label{geracao}
-Nesta seção, será abordado a implementação da geração de terrenos, tanto na \emph{GPU}, quanto na \emph{CPU}. Os dois têm, em comum, o algoritmo usado para a geração (\emph{Ridged multifractal noise}).
+Nesta seção, será abordado a implementação da geração de terrenos, tanto na \emph{GPU}, quanto na \emph{CPU}. Os dois têm, em comum, o algoritmo usado para a geração (\emph{Ridged multifractal noise}, descrito na Seção \ref{ridged}).
+
+O terreno geral é dividide em terrenos menores (chamados \emph{patchs}), como mostro \emph{grid} da Figura \ref{fig:resultados:grid}:
+
+\begin{figure}[H]
+	\center{\includegraphics[width=0.5\linewidth]{img/caps/grid.png}}
+	\caption{\label{fig:resultados:grid} \emph{Patchs} exibidos em um \emph{grid}.}
+\end{figure}
+
+Considerando o usuário inicialmente localizado no \emph{patch} central, ao mover-se para um \emph{patch} vizinho, o sistema irá requisitar a geraçaõ de novos \emph{patchs}, vizinhos a aqueles que estão na borda do grid. O número de vizinhos gerados, bem como a quantidade de vizinhos do \emph{patch} central são variáveis do sistema, podendo ser adaptadas, pelo usuário, de acordo com o poder de processamento de sua máquina.
 
 
 \subsubsection{Geração do Terreno na \emph{GPU}}
-Toda a geração dos terrenos na \emph{GPU} é feita através de um \emph{fragment shader}. Como toda computação de \emph{shaders} só pode ser aplicada com base em geometrias ou texturas, foi preciso renderizar um quadrado. Entra aí então o \sigla{FBO}{Frame Buffer Object}, extensão do \emph{OpenGL} que permite criar \emph{Frame Buffers} e realizar renderizações \emph{off-screen} (que não são exibidas na tela). O quadrado é renderizado em um novo \emph{frame buffer}, e o \emph{shader} de geração procedural é aplicado sobre ele. O resultado pode ser visto na Figura \ref{fig:resultados:heightmap}.
+Toda a geração dos terrenos na \emph{GPU} é feita através de um \emph{fragment shader}. Como toda computação de \emph{shaders} só pode ser aplicada com base em geometrias ou texturas, foi preciso renderizar um quadrado. Entra aí então o \sigla{FBO}{Frame Buffer Object}, extensão do \emph{OpenGL} que permite criar \emph{Frame Buffers} e realizar renderizações \emph{off-screen} (que não são exibidas na tela), possibilitando que o mapa de textura seja acessado como uma textura. O quadrado é renderizado em um novo \emph{frame buffer}, e o \emph{shader} de geração procedural é aplicado sobre ele. O resultado pode ser visto na Figura \ref{fig:resultados:heightmap}.
 
 \begin{figure}[H]
 	\center{\includegraphics[width=0.5\linewidth]{img/caps/heightmap.png}}
 	\caption{\label{fig:resultados:heightmap} Mapa de altura gerado pelo \emph{shader}.}
 \end{figure}
 
-Um aspecto importante é que, durante a geração do mapa de altura, os valores das normais de cada vértice também são caulados.
+Como o mapa de altura é gerado na \emph{GPU}, não há qualquer tipo de perda de desempenho com a transferência entre a memória RAM e a memória da placa de vídeo. Um aspecto importante é que, durante a geração do mapa de altura, os valores das normais de cada vértice também são calculados.
 
 
 
@@ -138,4 +147,8 @@ A Seção \ref{testeGeracao} mostra um teste com a geração de 100 terrenos procedu
 \subsection{Tempos de Geração do Terreno}
 \label{testeGeracao}
 \input{testeGeracao}
+
+\subsection{\emph{Frames} por Segundo Durante Navegação}
+\label{testeFPS}
+\input{testeFPS}
 
