--- a/trunk/poc2/apresentacao_monografia/apresentacao_monografia.tex
+++ b/trunk/poc2/apresentacao_monografia/apresentacao_monografia.tex
@@ -32,7 +32,7 @@
 
 
 \begin{document}
-\title[Geração Procedural de Terrenos Infinitos na GPU]{Desenvolvimento de um Arcabouço para a Geração Procedural e Visualização de Terrenos em Tempo-Real}
+\title[Geração Procedural e Visualização de Terrenos Pseudo-Infinitos na GPU]{Geração Procedural e Visualização de Terrenos Pseudo-Infinitos na GPU}
 \author[Fábio Miranda - Apresentação final - POC II]{Fábio Markus Nunes Miranda\\Orientador: Prof. Luiz Chaimowicz\\Co-Orientador: Carlúcio Cordeiro}
 \institute[Universidade Federal de Minas Gerais]{Departamento de Ciência da Computação\\Universidade Federal de Minas Gerais}
 \date[\today]{Apresentação final - POC II}
