--- a/trunk/poc2/apresentacao_monografia/conclusao.tex
+++ b/trunk/poc2/apresentacao_monografia/conclusao.tex
@@ -5,13 +5,13 @@
 
 \begin{frame}\frametitle{Conclusão e trabalhos futuros} 
 	\begin{itemize}
-		\item Uma base de desenvolvimento já foi estabelecida.
-		\item Já é possível visualizar terrenos, mas é preciso melhorar a transição entre eles.
-		\item POC 2:
+		\item A execução na GPU teve um desempenho muito superior a CPU.
+		\item Nível de detalhamento intuitivo.
+		\item Não há necessidade de se criar novas geometrias.
+		\item Possíveis melhorias:
 		\begin{itemize}
-			\item Terrenos esféricos.
-			\item Uso de texturas com sombras pré-calculadas.
-			\item Interface gráfica mais atrativa.
+			\item Melhorar a heterogeneidade.
+			\item Escalonamento entre a geração na GPU e na CPU.
 		\end{itemize}
 	\end{itemize}
 \end{frame}
