--- a/trunk/poc2/apresentacao_monografia/motivacao.tex
+++ b/trunk/poc2/apresentacao_monografia/motivacao.tex
@@ -15,10 +15,10 @@
 \begin{frame}\frametitle{O que é geração procedural?} 
 \begin{itemize}
 	\item Geração procedural é um termo genérico para descrever algoritmos que determinam características de efeitos ou modelos.
-	\item Há diversos tipos de técnicas e algoritmos, cada um aplicado a uma determinada área:
+	\item Vantagens:
 	\begin{itemize}
-		\item L-System: geração de árvores e cidades.
-		\item Fractais e Perlin Noise: geração de terrenos e texturas
+		\item Flexibilidade: alterando os parâmetros do algoritmo, é possível gerar um grande número de modelos.
+		\item Espaço: não há necessidade de um grande espaço em disco, já que tudo será ditado por algoritmos.
 	\end{itemize}
 \end{itemize}
 \end{frame}
@@ -35,32 +35,25 @@
 
 
 
-\begin{frame}\frametitle{Vantagens da geração procedural} 
-\begin{itemize}
-	\item Flexibilidade: alterando os parâmetros do algoritmo, é possível gerar um grande número de modelos.
-	\item Espaço: não há necessidade de um grande espaço em disco, já que tudo será ditado por algoritmos.
-\end{itemize}
-\end{frame}
-
-\begin{frame}\frametitle{Exemplos}
-\begin{columns}
-	\begin{column}{5cm}
-	\begin{itemize}
-		\item \alert<1>{.kkrieger\\} \only<1>{\scriptsize Praticamente tudo gerado proceduralmente}
-		\item \alert<2>{Elite (1984)\\} \only<2>{\scriptsize Oito galáxias, 256 planetas.}
-		\item \alert<3>{SpeedTree\\} \only<3>{\scriptsize Árvores geradas proceduralmente.}
-	\end{itemize}
-	\vspace{3cm} 
-	\end{column}
-	\begin{column}{5cm}
-	\begin{overprint}
-		\includegraphics<1>[width=1.0\linewidth]{img/kkrieger}
-		\includegraphics<2>[width=1.0\linewidth]{img/elite}
-		\includegraphics<3>[width=1.0\linewidth]{img/speedtree}
-	\end{overprint}
-	\end{column}
-\end{columns}
-\end{frame}
+%\begin{frame}\frametitle{Exemplos}
+%\begin{columns}
+%	\begin{column}{5cm}
+%	\begin{itemize}
+%		\item \alert<1>{.kkrieger\\} \only<1>{\scriptsize Praticamente tudo gerado proceduralmente}
+%		\item \alert<2>{Elite (1984)\\} \only<2>{\scriptsize Oito galáxias, 256 planetas.}
+%		\item \alert<3>{SpeedTree\\} \only<3>{\scriptsize Árvores geradas proceduralmente.}
+%	\end{itemize}
+%	\vspace{3cm} 
+%	\end{column}
+%	\begin{column}{5cm}
+%	\begin{overprint}
+%		\includegraphics<1>[width=1.0\linewidth]{img/kkrieger}
+%		\includegraphics<2>[width=1.0\linewidth]{img/elite}
+%		\includegraphics<3>[width=1.0\linewidth]{img/speedtree}
+%	\end{overprint}
+%	\end{column}
+%\end{columns}
+%\end{frame}
 
 \begin{frame}\frametitle{GPU} 
 \begin{itemize}
