--- a/trunk/poc2/monografia/resultados.tex
+++ b/trunk/poc2/monografia/resultados.tex
@@ -93,10 +93,12 @@ Como a malha é gerada apenas uma única vez (no início da execução), não é precis
 
 \begin{figure}[H]
 	\center{\includegraphics[width=0.8\linewidth]{img/texturas.png}}
-	\caption{\label{fig:texturas} Movimentação da câmera do nodo (1,1), na esquerda, para o nodo (2, 1), na direita.}
+	\caption{\label{fig:texturas} Movimentação da câmera para um outro \emph{patchs}.}
 \end{figure}
 
-Na Figura \ref{fig:texturas} é possível notar o deslocamento dos mapas de textura quando a câmera se move do nodo (1,1) para o nodo (2,1). Este método, possível somente para terrenos gerados na \emph{GPU}, diminuiu a necessidade de implementação de um algoritmo de nível de detalhe mais robusto. Além disso, como sabemos o número de vértices antecipadamente, a performance do aplicativo tem uma menor chance de sofrer quedas bruscas de rendimento.
+Na Figura \ref{fig:texturas} é possível notar o deslocamento dos mapas de textura quando a câmera move para o \emph{patchs} superior ao (1,1). Para que haja uma transição, uma matriz de translação, com valores iguais ao tamanho do \emph{patch}, é feita e multiplicada à matriz \emph{MODELVIEW}.
+
+ Este método, possível somente para terrenos gerados na \emph{GPU}, diminuiu a necessidade de implementação de um algoritmo de nível de detalhe mais robusto. Além disso, como sabemos o número de vértices antecipadamente, a performance do aplicativo tem uma menor chance de sofrer quedas bruscas de rendimento.
 
 
 \subsubsection{Visualização do Terreno Gerado na \emph{GPU}}
